--- a/travel-destination/src/Home/Home.css
+++ b/travel-destination/src/Home/Home.css
@@ -22,12 +22,14 @@
   height:100%;
   object-fit: cover;
   z-index: -1;
+  opacity: 1;
 }
 .hero-content {
   position: relative;
   top: 40%;
   text-align: center;
   z-index: 1;
+   font-weight: 500;
 }
 
 .hero-content h1 {
