--- a/travel-destination/src/components/Navbar.css
+++ b/travel-destination/src/components/Navbar.css
@@ -39,7 +39,8 @@
   color: white ;
   text-decoration: none;
   font-size: 16px;
-  transition: color 0.3s ease;
+  transition: color 0.5s ease;
+  font-weight: 500;
 }
 
 .nav-links li a:hover {
